ｄｑｗｄ
