# openapi/build/bundle.yaml
@@ -717,6 +717,10 @@ components:
           type: integer
           nullable: true
           description: 実働時間（分）
+        overtimeMinutes:
+          type: integer
+          nullable: true
+          description: 残業時間（分）
     AttendanceIndexRequest:
       type: object
       description: 勤怠レコード取得のHTTPリクエスト
